kube/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-frontend-dashboard
  namespace: core-frontend
  labels:
    app: core-frontend-dashboard
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: core-frontend-dashboard
  template:
    metadata:
      labels:
        app: core-frontend-dashboard
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: core-frontend-dashboard
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
