kube/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-frontend-dashboard
  namespace: core-frontend
  labels:
    app: core-frontend-dashboard
spec:
  type: ClusterIP
  selector:
    app: core-frontend-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
